# neural-net

./: .gitignore  .pre-commit-config.yaml  CITATION  LICENSE  README.md  Untitled.ipynb  environment.yml  pyproject.toml  setup.cfg  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
.github/workflows/: main.yml
paper/: .latexmkrc  bibliography.bib  main.tex
paper/source/: abstract.tex  preamble.tex  titlepage.tex
paper/source/sections/: conclusion.tex  fitting.tex  introduction.tex  rates.tex  simulation.tex
paper/texmf/: imsart.cls  imsart.sty
presentation/: :  main.html  main.md  practical.html  style.css  theoretical.html  theoretical.md
src/nnet/: config.py  data.py  network.py  neural_network.ipynb  plotting.py  simulation.py  task_plots.py  task_simulation.py  watch_progress.ipynb
tests/: test_network.py  test_placeholder.py
