[metadata]
name = nnet
description = Project for Topics in Econometrics and Statistics, Summer 2022
long_description = file: README.md
long_description_content_type = text/markdown
url = hhttps://github.com/timmens/topics-2022
author = Tim Mensinger
author_email = tmensinger@uni-bonn.de
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Changelog = https://github.com/timmens/topics-2022
    Documentation = https://github.com/timmens/topics-2022
    Github = https://github.com/timmens/topics-2022
    Tracker = https://github.com/timmens/topics-2022/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.7
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/nnet/_version.py
